Added more changes to my work

--- a/public/css/credit.css
+++ b/public/css/credit.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/images/6.jpg);
+    /* background-image: url(/images/6.jpg); */
     background-size: cover;
     max-width: 500px;
     border-radius: 8px;
@@ -11,20 +11,16 @@ body{
     align-content: center
 }
 
-
-
-
-
-/* .container {
+body.container {
     max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding:20px;
     margin: 80px auto;
-    background-color: white;
+    background-color: #e1dd72;
     text-align: center;
     align-content: center;
-     */
+}   
    
     
 
@@ -40,9 +36,9 @@ h1 {
 }
 
 input[type="submit"] {
-    width: 10%;
+    width: 50%;
     padding: 10px;
-    background-color: #04fe10;
+    background-color: #1b6535;
     color: white;
     border: none;
     border-radius: 4px;
@@ -51,7 +47,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color:#04fe10;
+    background-color:#1b6535;
 
 }
 
