--- a/views/creditlist.pug
+++ b/views/creditlist.pug
@@ -1,6 +1,7 @@
 extends sales-agentdashboard.pug
 
-block content 
+block content
+ 
  
   doctype html
   html
@@ -41,11 +42,11 @@ block content
                   td #{credit.quantity}
                   td #{credit.date}
                   td
-                    a.btn.btn-primary.btn-sm(href='/updateCredit/' +credit._id) Update
+                    a.btn.btn-primary.btn-sm(class="updateCredit-btn" href='/updateCredit/' +credit._id) Update
                   td
                     form(method="POST" action='/deleteCredit')
-                      input(type="hidden", placeholder="", name="id", value=credit.id)
-                      button.btn.btn-danger.btn-sm(type="submit") Delete
+                      input(type="hidden", placeholder="", name="id", value=credit._id)
+                      button.btn.btn-danger.btn-sm(class='delete-btn' type="submit") Delete
             else
                 tr
                   td(colspan="12", class="text-center") No Credit Sale yet :()
