--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,8 @@ html(lang="en")
     title Home Page
     Link(rel="stylesheet" href="/css/home.css")     
   body
-    h1 WELCOME TO KGL GROCERY LIMITED!
+    h1 WELCOME TO KGL GROCERY LIMITED
     p Never run out of cereal again! New deals every time you visit! New finds all the time; No excuses.
     a(href="/login") Login
+    
+  
