--- a/public/css/allusers.css
+++ b/public/css/allusers.css
@@ -14,7 +14,7 @@ table {
     width: 80%;
     margin: 20px auto;
     border-collapse: collapse;
-    background-color: #fff;
+    background-color: #e1dd72;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -26,7 +26,7 @@ td {
 }
 
 th {
-    background-color: #04fe10;
+    background-color: #1b6535;
     color: white;
 }
 
@@ -34,30 +34,51 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-.edit-btn {
-    padding: 4px 12px;
-    background-color: #ffa500;
-    color: white;
-    border: none;
+/* General button styling */
+.btn {
     border-radius: 4px;
-    cursor: pointer;
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
     text-decoration: none;
-}
-
-a:hover {
-    background-color: #c78100;
-}
-
-.delete-btn {
-    padding: 4px 12px;
-    background-color: #ff0000;
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  /* Blue button for edit */
+  .btn-primary {
+    background-color: #007bff;
     color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-decoration: none;
-}
+    border: 1px solid #007bff;
+  }
+  
+  .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #004085;
+  }
 
-.delete-btn:hover {
-    background-color: #c60202;
-}
+    /* Green button for add user */
+    .btn-success {
+        background-color: #28a745;
+        color: white;
+        border: 1px solid #28a745;
+      }
+      
+      .btn-success:hover {
+        background-color: #218838;
+        border-color: #1e7e34;
+      }
+
+  /* Red button for Delete */
+  .btn-danger {
+    background-color: red;
+    color: white;
+    border: 1px solid #dc3545;
+  }
+  
+  .btn-danger:hover {
+    background-color: #c82333;
+    border-color: #bd2130;
+  }
+  
