--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,6 @@
  body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #e1dd72;
     margin: 0;
     padding: 0;
     display: flex;
@@ -9,9 +9,9 @@
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-image: url(/images/4.jpg);
+    /* background-image: url(/images/4.jpg); */
     background-size: cover;
-    color: white;
+
 } */
 
 body, html {
@@ -20,41 +20,21 @@ body, html {
     height: 100%;
     overflow: hidden;
 }
-.carousel {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-.carousel-item {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-.carousel-item.active {
-    opacity: 1;
-}
 
 h1 {
-    color: #333;
+    color: #1b6535;
+    font-size: xx-large;
 }
 
 p {
     margin: 20px 0;
-    color: #666;
+    color: black;
 }
 
 a {
     width: 200px;
     padding: 10px;
-    background-color: #04fe10;
+    background-color: #1b6535;
     color: white;
     border: none;
     border-radius: 4px;
@@ -63,5 +43,5 @@ a {
 }
 
 a:hover {
-    background-color: #04fe10;
+    background-color: #1b6535;
 }
