--- a/public/css/login.css
+++ b/public/css/login.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 form {
-    background-color: #fff;
+    background-color: #1b6535;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -34,29 +34,31 @@ input[type="password"] {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #e1dd72;
     border-radius: 4px;
 }
 
 input[type="submit"] {
     width: 50%;
     padding: 10px;
-    background-color: #04fe10;
-    color: white;
+    background-color: #a8c66c;
+    color: #c6d7eb;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #04fe10;
+    background-color: #a8c66c;
+    color: black;
 }
 
 a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: #04fe10;
+    color: black;
+    font-size: medium;
     text-decoration: none;
 }
 
