--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #e1dd72;
     margin: 0;
     padding: 0;
     display: flex;
@@ -16,7 +16,7 @@ h2 {
 }
 
 form {
-    background-color: #fff;
+    background-color: #1b6535;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@ input[type="password"] {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #e1dd72;
     border-radius: 4px;
 }
 
@@ -49,7 +49,7 @@ select {
 input[type="submit"] {
     width: 50%;
     padding: 10px;
-    background-color: #04fe10;
+    background-color: #a8c66c;
     color: white;
     border: none;
     border-radius: 4px;
@@ -57,14 +57,14 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color:#04fe10;
+    background-color:#a8c66c;
 }
 
 a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: #04fe10;
+    color: #3b4d61;
     text-decoration: none;
 }
 
