--- a/views/login.pug
+++ b/views/login.pug
@@ -12,3 +12,4 @@ html(lang="en")
       input(type="password" name="password" placeholder="Password" required)
       input(type="submit" value="Login")
     a(href="/signup") Don't have an account? Register
+<script src="/js/formValidation.js"></script>
