--- a/views/producelist.pug
+++ b/views/producelist.pug
@@ -39,14 +39,15 @@ block content
                   td #{produce.theBranchName}
                   td #{produce.contact}
                   td #{produce.thePriceToBeSoldAt}
-                  td
-                    a.btn.btn-secondary.btn-sm(href='/thesale') Make Sale
+                  
                   td
                     a.btn.btn-primary.btn-sm(href='/updateProduce/'+produce._id) Update
                   td
                     form(method="POST" action='/deleteProduce')
                       input(type="hidden", placeholder="", name="id", value=produce._id)
-                      button.btn.btn-danger.btn-sm(type="submit") Delete
+                      button.btn.btn-danger.btn-sm(class="delete-btn" type="submit") Delete
+                  td
+                    a.btn.btn-success.btn-sm(href='/thesale')  Sale
             else
               tr
                   td(colspan="8", class="text-center") No produce yet :()
