--- a/views/register.pug
+++ b/views/register.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Signup Page
-    Link(rel="stylesheet" href="/css/signup.css")     
+    link(rel="stylesheet" href="/css/signup.css")
   body
     h2 Sign Up
     form(action="/signup" method="POST")
@@ -21,4 +21,4 @@ html(lang="en")
       input(type="password" name="password" placeholder="Password")
       input(type="submit" value="Sign Up")
     a(href="/login") Already have an account? Login
-
+    script(src="/js/signup.js")
