--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,13 @@ html(lang="en")
     Link(rel="stylesheet" href="/css/home.css")     
   body
     h1 WELCOME TO KGL GROCERY LIMITED
-    p Never run out of cereal again! New deals every time you visit! New finds all the time; No excuses.
-    a(href="/login") Login
+    p Never run out of cereal again! 
+ 
+  td
+        a.btn.btn-primary.btn-sm(href='/cereal') View Products
+  br
+  td
+      a.btn.btn-success.btn-sm(href='/login')  Login
+
     
   
