--- a/views/product.pug
+++ b/views/product.pug
@@ -26,14 +26,10 @@ main
       
     .stat-card(style='text-align: center;')
       img.stat-image(src='/images/rice1.jpg' alt='Image 2')
-      h3 Rice F1
+      h3 Rice 
       
     .stat-card(style='text-align: center;')
       img.stat-image(src='/images/rice5.jpg' alt='Image 2')
-      h3 Rice
-      
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/rice2.jpg' alt='Image 2')
       h3 Rice
       
     .stat-card(style='text-align: center;')
@@ -42,10 +38,6 @@ main
       
     .stat-card(style='text-align: center;')
       img.stat-image(src='/images/mz4.jpg' alt='Image 2')
-      h3 Maize
-      
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/pmz.jpg' alt='Image 2')
       h3 Maize
       
     .stat-card(style='text-align: center;')
@@ -69,10 +61,6 @@ main
       h3 Soya Beans
       
     .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/soya.jpg' alt='Image 2')
-      h3 Soya Beans
-      
-    .stat-card(style='text-align: center;')
       img.stat-image(src='/images/cowp.jpg' alt='Image 2')
       h3 Cow peas
       
@@ -89,4 +77,4 @@ main
       h3 Cow peas
       
 footer
-  p &copy; 2024 My Landing Page
+  p &copy; 2024 Designed by Sharon.O.
