--- a/public/css/creditlist.css
+++ b/public/css/creditlist.css
@@ -1,10 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #f4f4f4; 
     margin: 0;
     padding: 20px;
-    background-image: url(/images/3.jpg);
-    background-size: cover;
+    /* background-image: url(/images/bb.jpg);  */
+    /* background-size: cover; */
 }
 
 h2 {
