--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,13 +8,13 @@ body {
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    background-image: url(/images/d.jpg);
+    background-image: url(/images/bb.jpg);
     background-size: cover;
 }
 
 h2 {
     text-align: center;
-    color: #333;
+    color: whitesmoke;
 }
 
 form {
@@ -41,15 +41,15 @@ input[type="password"] {
 input[type="submit"] {
     width: 50%;
     padding: 10px;
-    background-color: #a8c66c;
-    color: #c6d7eb;
+    background-color: #e1dd72;
+    color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #a8c66c;
+    background-color: #e1dd72;
     color: black;
 }
 
@@ -57,7 +57,7 @@ a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: black;
+    color: whitesmoke;
     font-size: medium;
     text-decoration: none;
 }
