--- a/public/css/produce.css
+++ b/public/css/produce.css
@@ -1,10 +1,14 @@
+body{
+    background-image: url(/images/bb3.jpg); 
+
+}
+
 .container {
     max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding:20px;
     margin: 80px auto;
-    background-image: url();
     align-items: center;
     background-color: #e1dd72;
     align-content: center;
@@ -37,5 +41,18 @@ input[type="submit"]:hover {
     background-color:#1b6535;
 
 }
+
+
+.error-message {
+    color: red;
+    font-weight: bold;
+    display: none; /* Hide errors initially */
+  }
+  
+  input.error-border,
+  select.error-border {
+    border: 2px solid red;
+  }
+  
 
 
