--- a/public/css/sales.css
+++ b/public/css/sales.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url(/images/a.jpg);
+    background-image: url(/images/bb2.jpg);
     background-size: cover;
 }
 
