--- a/public/css/saleslist.css
+++ b/public/css/saleslist.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
     margin: 0;
     padding: 20px;
-    background-image: url(/images/b.jpg);
+    /* background-image: url(/images/b.jpg); */
     background-size: cover;
 }
 
@@ -18,7 +18,6 @@ table {
     border-collapse: collapse;
     background-color: #e1dd72;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-block-start-color: #ddd;
 }
 
 th,
