--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #e1dd72;
+    background-image: url(/images/bb3.jpg);
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,7 +12,7 @@ body {
 
 h2 {
     text-align: center;
-    color: #333;
+    color: whitesmoke;
 }
 
 form {
@@ -49,7 +49,7 @@ select {
 input[type="submit"] {
     width: 50%;
     padding: 10px;
-    background-color: #a8c66c;
+    background-color: #e1dd72;
     color: white;
     border: none;
     border-radius: 4px;
@@ -57,14 +57,14 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color:#a8c66c;
+    background-color:#e1dd72;
 }
 
 a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: #3b4d61;
+    color: black;
     text-decoration: none;
 }
 
