--- a/views/sale.pug
+++ b/views/sale.pug
@@ -1,21 +1,34 @@
 doctype html
 head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Receipt Generator
-  link(rel='stylesheet' href='/css/gen.css')
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    title Receipt Generator
+    link(rel='stylesheet' href='/css/sales.css') 
+//- nav.horizontal-navbar
+//-   a(href='home') Home
+//-   a(href='thesale') Make Sales
+//-   a(href='creditsale') Make Credit sales
+//-   a(href='stock') Purchase 
 .container
-  h1 Record Sales
-  form#receiptForm(action='/thesale' method='POST')
-    label(for='salesAgent') The Sales Agent Name:
-    input#salesAgent(type='text' name='salesAgent')
-    label(for='transactionId') Transaction ID:
-    input#transactionId(type='text' name='transactionId')
-    label(for='date') Date and Time:
-    input#date(type='datetime-local' name='date')
-    label(for='customerName') Customer Name:
-    input#customerName(type='text' name='customerName')
-    label(for='items') Items (format: Item, Quantity, Price):
-    textarea#items(name='items' rows='5')
-    button(type='submit') Submit
-script(src='/js/gen.js')
+    h1 Record Sales
+    form#receiptForm(action='/thesale' method='POST' )
+      label(for='salesAgent') The Sales Agent Name:
+      input#salesAgent(type='text' name='salesAgent')
+      span#salesAgentError.error
+      label(for='transactionId') Transaction ID:
+      input#transactionId(type='text' name='transactionId')
+      span#transactionIdError.error
+      label(for='date') Date and Time:
+      input#date(type='datetime-local' name='date')
+      span#dateError.error
+      label(for='customerName') Customer Name:
+      input#customerName(type='text' name='customerName')
+      span#customerNameError.error
+      label(for='items') Items (format: Item, Quantity, Price):
+      textarea#items(name='items' rows='3')
+      span#itemsError
+      label(for='total') Total:
+      input#total(type='text' name='total' )
+      span#totalError.error
+      button(type='submit') Submit
+script(src='/js/sales.js')
